--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
           content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"
           href="style.css">
-    <title>QR Code Scanner / Reader
+    <title>MarketSecrets - MCC Finder
     </title>
 </head>
 
 <body>
+<div class="navbar">
+  <a href="https://www.marketsecrets.in">Market Secrets Home</a>
+</div>
     <div class="container">
         <h1>MCC Finder from QR Code</h1>
         <div class="section">
@@ -24,5 +27,10 @@
         src="https://unpkg.com/html5-qrcode">
     </script>
     <script src="script.js"></script>
+<div class="footer">
+  <p>Copyright @MarketSecrets.in</p>
+</div>
+
 </body>
+
 </html>
